--- a/config_sample.env
+++ b/config_sample.env
@@ -1,74 +1,79 @@
+# Remove this line before deploying
+_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = "5282773147:AAGQrTXTcuV-npexTKwBfQBnbuqMaESmUWc"
-GDRIVE_FOLDER_ID = "1CaKQVv1ERhhzX8CmxKpQxdWFVoHvKFwq"
-OWNER_ID = 1654175473
+BOT_TOKEN = ""
+GDRIVE_FOLDER_ID = ""
+OWNER_ID =
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = "True"
-TELEGRAM_API = 14327136
-TELEGRAM_HASH = "2e413444c94417a4367fcca43a73607d"
+IS_TEAM_DRIVE = ""
+TELEGRAM_API =
+TELEGRAM_HASH = ""
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = "-1001718772164 -1001512562102"
-SUDO_USERS = "2012037924"
+AUTHORIZED_CHATS = ""
+SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = "True"
-INDEX_URL = "https://howtodo.howtodotechvlog.workers.dev/0:"
+USE_SERVICE_ACCOUNTS = ""
+INDEX_URL = ""
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
-UPTOBOX_TOKEN = "71e2527b5e059f88687a0b94df1ebde4919q3"
+CMD_INDEX = ""
+UPTOBOX_TOKEN = ""
 # Update
 UPSTREAM_REPO = ""
+UPSTREAM_BRANCH = ""
 # Leech
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent
-BASE_URL_OF_BOT = "https://htdatrocious.herokuapp.com"
-IS_VPS = ""
+BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
+QB_TIMEOUT = ""
 # Rss
 RSS_DELAY = ""
 RSS_COMMAND = ""
 RSS_CHAT_ID = ""
 USER_STRING_SESSION = ""
 # Pivate Files
-ACCOUNTS_ZIP_URL = "https://drive.google.com/uc?export=download&id=1rG1YThi4ZftyFp7pOLPOC6vVLtCjjBYx"
-TOKEN_PICKLE_URL = "https://drive.google.com/uc?export=download&id=1GFV7wGDnkYo8RxBmCzBMHAJSY8AC_p1W"
+ACCOUNTS_ZIP_URL = ""
+TOKEN_PICKLE_URL = ""
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 # Mega
-MEGA_API_KEY = "Qn4WUSTB"
-MEGA_EMAIL_ID = "mrjackkoe@gmail.com"
-MEGA_PASSWORD = "@&Megapassword00"
+MEGA_API_KEY = ""
+MEGA_EMAIL_ID = ""
+MEGA_PASSWORD = ""
 BLOCK_MEGA_FOLDER = ""
 BLOCK_MEGA_LINKS = ""
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
-# GDTOT COOKIES
-PHPSESSID = "djbrh0n1jeo43tg545vrtlvojk"
-CRYPT = "UUhQTTR1UUtwUjRSRHhqeklGNFZ1QXI1UjkzbTErWGg4VnN4SjV1ZlNZTT0%3D"
+# GDTOT COOKIE
+CRYPT = ""
 # Size Limits
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""
 MEGA_LIMIT = ""
+STORAGE_THRESHOLD = ""
 # Buttons
-VIEW_LINK = "True"
-BUTTON_FOUR_NAME = "Bot Owner"
-BUTTON_FOUR_URL = "https://t.me/howtodoyt"
-BUTTON_FIVE_NAME = "Support"
-BUTTON_FIVE_URL = "https://www.youtube.com/channel/UCohk_mpuW8SpgZMyOzRdKcA"
+VIEW_LINK = ""
+BUTTON_FOUR_NAME = ""
+BUTTON_FOUR_URL = ""
+BUTTON_FIVE_NAME = ""
+BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
 BUTTON_SIX_URL = ""
 # Torrent Search
 SEARCH_API_LINK = ""
+SEARCH_LIMIT = ""
 SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
